--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,36 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Secret env
+*.env
+*.env*.local
+*.env.development
+
+# Merge Conflict (backup files)
+*.orig
+
+# ES Lint Cache File
+*.eslintcache
+
+# ES Lint Ignore File
+*.eslintignore
+
+# VS Code File
+.vscode
+
+package-lock.json
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
