--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "ts-lint": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.19.0",
     "next": "14.2.15",
-    "next-auth": "^4.24.8",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18"
   },
