--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": ["src/*"],
       "@/components/*": ["src/components/*"],
       "@/features/*": ["src/components/features/*"],
       "@/styles/*": ["src/styles/*"],
