--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.19.0",
+    "@vercel/analytics": "^1.3.1",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
